# react-native-get-random-values

./: .gitignore  .npmignore  getRandomBase64.js  index.js  package-lock.json  package.json  react-native-get-random-values.podspec  readme.md
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/java/org/linusu/: RNGetRandomValuesModule.java  RNGetRandomValuesPackage.java
android/src/oldarch/java/org/linusu/: NativeRNGetRandomValuesSpec.java
cpp/: react-native-get-random-values.cpp  react-native-get-random-values.h
ios/: RNGetRandomValues.h  RNGetRandomValues.m  RNGetRandomValues.mm
ios/RNGetRandomValues.xcodeproj/: project.pbxproj
specs/: NativeRNGetRandomValues.js
windows/: RNGetRandomValues.cpp  RNGetRandomValues.h  RNGetRandomValues.sln  RNGetRandomValues.vcxproj  RNGetRandomValues61.sln  ReactNativeGetRandomValues.sln  ReactPackageProvider.cpp  ReactPackageProvider.h  ReactPackageProvider.idl  pch.h
windows/RNGetRandomValues/: RNGetRandomValues.cpp  RNGetRandomValues.cs  RNGetRandomValues.csproj  RNGetRandomValues.h  RNGetRandomValues.vcxproj  RNGetRandomValues.vcxproj.filters  RNGetRandomValuesModule.cpp  RNGetRandomValuesModule.h  ReactPackageProvider.cpp  ReactPackageProvider.cs  ReactPackageProvider.h  ReactPackageProvider.idl  packages.lock.json  pch.h
windows/RNGetRandomValues61/: RNGetRandomValues61.vcxproj  RNGetRandomValues61.vcxproj.filters
windows/ReactNativeGetRandomValues/: PropertySheet.props  ReactNativeGetRandomValues.cpp  ReactNativeGetRandomValues.h  ReactNativeGetRandomValues.vcxproj  ReactPackageProvider.cpp  (+4 more)
(+1 files in other folders)
